# python/src/scorable/generated/openapi_aclient/models/message_turn_request.py
@@ -1,0 +1,104 @@
+# coding: utf-8
+
+"""
+Scorable API
+
+Scorable JSON API provides a way to access Scorable using provisioned API token
+
+The version of the OpenAPI document: 1.0.0 (latest)
+Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+Do not edit the class manually.
+"""  # noqa: E501
+
+from __future__ import annotations
+
+import json
+import pprint
+import re  # noqa: F401
+from typing import Any, ClassVar, Dict, List, Optional, Set
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from typing_extensions import Annotated, Self
+
+from scorable.generated.openapi_aclient.models.role_enum import RoleEnum
+
+
+class MessageTurnRequest(BaseModel):
+    """
+    MessageTurnRequest
+    """  # noqa: E501
+
+    role: RoleEnum
+    content: Annotated[str, Field(min_length=1, strict=True)]
+    contexts: Optional[List[Annotated[str, Field(min_length=1, strict=True)]]] = None
+    tool_name: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["role", "content", "contexts", "tool_name"]
+
+    model_config = ConfigDict(
+        populate_by_name=True,
+        validate_assignment=True,
+        protected_namespaces=(),
+    )
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Optional[Self]:
+        """Create an instance of MessageTurnRequest from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        excluded_fields: Set[str] = set([])
+
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude=excluded_fields,
+            exclude_none=True,
+        )
+        # set to None if contexts (nullable) is None
+        # and model_fields_set contains the field
+        if self.contexts is None and "contexts" in self.model_fields_set:
+            _dict["contexts"] = None
+
+        # set to None if tool_name (nullable) is None
+        # and model_fields_set contains the field
+        if self.tool_name is None and "tool_name" in self.model_fields_set:
+            _dict["tool_name"] = None
+
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+        """Create an instance of MessageTurnRequest from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate(
+            {
+                "role": obj.get("role"),
+                "content": obj.get("content"),
+                "contexts": obj.get("contexts"),
+                "tool_name": obj.get("tool_name"),
+            }
+        )
+        return _obj
